convert WindowFeatureProcessFunction to scala and add unit tests